--- a/IPTV.xcodeproj/xcshareddata/xcschemes/IPTV - Release.xcscheme
+++ b/IPTV.xcodeproj/xcshareddata/xcschemes/IPTV - Release.xcscheme
@@ -72,6 +72,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "IPTV"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
