--- a/IPTV.xcodeproj/xcshareddata/xcschemes/IPTV - Release.xcscheme
+++ b/IPTV.xcodeproj/xcshareddata/xcschemes/IPTV - Release.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2FAE4C772B545EDA000B12E6"
+               BuildableName = "IPTVUITests.xctest"
+               BlueprintName = "IPTVUITests"
+               ReferencedContainer = "container:IPTV.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Release"
