--- a/IPTV.xcodeproj/xcshareddata/xcschemes/IPTV - Release.xcscheme
+++ b/IPTV.xcodeproj/xcshareddata/xcschemes/IPTV - Release.xcscheme
@@ -63,6 +63,10 @@
             ReferencedContainer = "container:IPTV.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <LocationScenarioReference
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
