--- a/IPTV-Info.plist
+++ b/IPTV-Info.plist
@@ -9,5 +9,12 @@
 		<key>NSExceptionDomains</key>
 		<dict/>
 	</dict>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<false/>
+		<key>UISceneConfigurations</key>
+		<dict/>
+	</dict>
 </dict>
 </plist>
