--- a/IPTV-Info.plist
+++ b/IPTV-Info.plist
@@ -14,5 +14,9 @@
 		<key>UISceneConfigurations</key>
 		<dict/>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 </dict>
 </plist>
