--- a/IPTV-Info.plist
+++ b/IPTV-Info.plist
@@ -10,6 +10,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>remote-notification</string>
 	</array>
 </dict>
 </plist>
