hopefully working now??

--- a/iOS/iOS.plist
+++ b/iOS/iOS.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSRequiresIPhoneOS</key>
+	<false/>
 	<key>CFBundleAlternateIcons</key>
 	<dict>
 		<key>BlueIcon</key>
@@ -50,6 +52,11 @@
 			<false/>
 		</dict>
 	</dict>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict/>
+		<dict/>
+	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>NSAppTransportSecurity</key>
